package edu.fiuba.algo3.modelo.juegoCommand;

public interface Accion {
    void ejecutar();
}
